@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#863] Avoid reporting negative latencies due to matching an ARP or ND
+  response to a probe sent after it was recieved. [Daniel Miller]
+
 o [ncat][GH#1441] To avoid confusion and to support default proxy ports,
   option --proxy now requires a literal IPv6 address to be specified using
   square-bracket notation, such as --proxy [2001:db8::123]:456. [nnposter] 
